# fastapi-telemetry-middleware

./: LICENSE  README.md  pyproject.toml
fastapi_telemetry_middleware/: telemetry_middleware.py
